BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_NumNDGCoerenzaGruco__c.field-meta.xml
<CustomField>
    <fullName>PTF_NumNDGCoerenzaGruco__c</fullName>
    <defaultValue>0</defaultValue>
    <label># NDG Coerenza Gruco</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>