BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_NumNDGImpuriDowngrade__c.field-meta.xml
<CustomField>
    <fullName>PTF_NumNDGImpuriDowngrade__c</fullName>
    <label># NDG impuri - downgrade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>