BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_NumNDGImpuriUpgrade__c.field-meta.xml
<CustomField>
    <fullName>PTF_NumNDGImpuriUpgrade__c</fullName>
    <label># NDG impuri - upgrade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>