BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_NumReferenti__c.field-meta.xml
<CustomField>
    <fullName>PTF_NumReferenti__c</fullName>
    <label>Numero Referenti</label>
    <summaryFilterItems>
        <field>Assignment__c.PTF_EndDate__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Assignment__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Primario</value>
    </summaryFilterItems>
    <summaryForeignKey>Assignment__c.PTF_MicroWallet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>