BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_PercImpurezzaDowngrade__c.field-meta.xml
<CustomField>
    <fullName>PTF_PercImpurezzaDowngrade__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Valore aggiornato a ieri.</inlineHelpText>
    <label>Percentuale impurezza downgrade</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>