BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_PercImpurezzaUpgrade__c.field-meta.xml
<CustomField>
    <fullName>PTF_PercImpurezzaUpgrade__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Valore aggiornato a ieri.</inlineHelpText>
    <label>Percentuale impurezza upgrade</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>