BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_PercNDGImpuriDowngrade__c.field-meta.xml
<CustomField>
    <fullName>PTF_PercNDGImpuriDowngrade__c</fullName>
    <formula>IF(CRM_numNDG__c &gt;0, PTF_NumNDGImpuriDowngrade__c / CRM_numNDG__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Valore aggiornato a ieri.</inlineHelpText>
    <label>% NDG impuri downgrade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>