BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_PercNDGImpuriUpgrade__c.field-meta.xml
<CustomField>
    <fullName>PTF_PercNDGImpuriUpgrade__c</fullName>
    <formula>IF(CRM_numNDG__c&gt;0, PTF_NumNDGImpuriUpgrade__c / CRM_numNDG__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Valore aggiornato a ieri.</inlineHelpText>
    <label>% NDG impuri upgrade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>