BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_PercNDGPuri__c.field-meta.xml
<CustomField>
    <fullName>PTF_PercNDGPuri__c</fullName>
    <formula>IF(CRM_numNDG__c&gt;0, PTF_NDGPuri__c / CRM_numNDG__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% NDG puri</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>