BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_Pool__c.field-meta.xml
<CustomField>
    <fullName>PTF_Pool__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pool</label>
    <type>Checkbox</type>
</CustomField>