BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_PortafoglioSpeciale__c.field-meta.xml
<CustomField>
    <fullName>PTF_PortafoglioSpeciale__c</fullName>
    <formula>IF(
	CONTAINS(
		TRIM(RIGHT(Name, 7)),&apos;-555&apos;
	) || 
	CONTAINS(
		TRIM(RIGHT(Name, 7)), &apos;-000999&apos;
	) ||
	CONTAINS(
		TRIM(RIGHT(Name, 7)), &apos;-000075&apos;
	), TRUE, FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portafoglio Speciale</label>
    <type>Checkbox</type>
</CustomField>