BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_PurezzaPortafoglio__c.field-meta.xml
<CustomField>
    <fullName>PTF_PurezzaPortafoglio__c</fullName>
    <formula>PTF_NumNDGCoerenzaGruco__c / CRM_numNDG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Valore aggiornato a ieri.</inlineHelpText>
    <label>Purezza portafoglio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>