BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_Referenti__c.field-meta.xml
<CustomField>
    <fullName>PTF_Referenti__c</fullName>
    <formula>IF(
PTF_Pool__c,
IF( OR(Owner:User.LastName == &apos;Non assegnato&apos;, Gestore__c == &apos;-&apos;), &apos;Non assegnato&apos;, &apos;Assegnati&apos;),
IF( OR(Owner:User.LastName == &apos;Non assegnato&apos;, Gestore__c == &apos;-&apos;), &apos;Non assegnato&apos;, &apos;Assegnato&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referenti</label>
    <type>Text</type>
</CustomField>