BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_ReferentiList__c.field-meta.xml
<CustomField>
    <fullName>PTF_ReferentiList__c</fullName>
    <formula>IF (
    PTF_Pool__c,
				IF (Owner:User.LastName == &apos;Non assegnato&apos;, &apos;Non assegnato&apos;, &apos;Assegnati&apos;),
				IF (Owner:User.LastName == &apos;Non assegnato&apos;, &apos;Non assegnato&apos;, &apos;Assegnato&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referente/i</label>
    <type>Text</type>
</CustomField>