BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_RegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>PTF_RegistrationNumber__c</fullName>
    <formula>Owner:User.PTF_RegistrationNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matricola</label>
    <type>Text</type>
</CustomField>