BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_ReportCapoFila__c.field-meta.xml
<CustomField>
    <fullName>PTF_ReportCapoFila__c</fullName>
    <formula>PTF_Capofila__r.PTF_IdCED__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CapoFila ID Ced</label>
    <type>Text</type>
</CustomField>