BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_StatoAssegnazione__c.field-meta.xml
<CustomField>
    <fullName>PTF_StatoAssegnazione__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Stato assegnazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>