BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_StatoAssegnazioneFormula__c.field-meta.xml
<CustomField>
    <fullName>PTF_StatoAssegnazioneFormula__c</fullName>
    <formula>IF(PTF_NumReferenti__c &lt;= 0, &apos;Non Assegnato&apos; ,  IF(PTF_NumReferenti__c  &gt; 1, &apos;Assegnati&apos;, 
 IF((PTF_NumReferenti__c  = 1) &amp;&amp; (PTF_Pool__c = true), &apos;Assegnati&apos;,&apos;Assegnato&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stato assegnazione</label>
    <type>Text</type>
</CustomField>