BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_TipologiaRuoloRreferente__c.field-meta.xml
<CustomField>
    <fullName>PTF_TipologiaRuoloRreferente__c</fullName>
    <formula>IF(
PTF_Pool__c,
&apos;Pool&apos;,
IF(CRM_ReferentePortafoglio__c != null,
   CRM_ReferentePortafoglio__r.PTF_TipologiaRuolo__r.Name, 
&apos;Non assegnato&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PTF_Tipologia ruolo referente</label>
    <type>Text</type>
</CustomField>