BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_UffPrivate__c.field-meta.xml
<CustomField>
    <fullName>PTF_UffPrivate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ufficio Private Associato</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Portafogli (Ufficio Private Associato)</relationshipLabel>
    <relationshipName>Portafogli4</relationshipName>
    <type>Lookup</type>
</CustomField>