BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_UpdateImpurezzaSwitch__c.field-meta.xml
<CustomField>
    <fullName>PTF_UpdateImpurezzaSwitch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Impurezza Switch</label>
    <type>Checkbox</type>
</CustomField>