BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_UpdatePurezzaSwitch__c.field-meta.xml
<CustomField>
    <fullName>PTF_UpdatePurezzaSwitch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UpdatePurezzaSwitch</label>
    <type>Checkbox</type>
</CustomField>