BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/Referente_User__c.field-meta.xml
<CustomField>
    <fullName>Referente_User__c</fullName>
    <formula>CASESAFEID(CRM_ReferentePortafoglio__r.PTF_User__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referente - User</label>
    <type>Text</type>
</CustomField>