BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/SecPredIdCedBanca__c.field-meta.xml
<CustomField>
    <fullName>SecPredIdCedBanca__c</fullName>
    <formula>PTF_Banca__r.PTF_IdCED__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SecPredIdCedBanca</label>
    <type>Text</type>
</CustomField>