BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/SecPredIdCedCapofila__c.field-meta.xml
<CustomField>
    <fullName>SecPredIdCedCapofila__c</fullName>
    <formula>PTF_Capofila__r.PTF_IdCED__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SecPredIdCedCapofila</label>
    <type>Text</type>
</CustomField>