BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/SecPredIdCedCentroPrivate__c.field-meta.xml
<CustomField>
    <fullName>SecPredIdCedCentroPrivate__c</fullName>
    <formula>IF( ISPICKVAL(PTF_ModelloDiServizio__c, &quot;Private&quot;) &amp;&amp; SecPredIdCedBanca__c = &apos;21792&apos; 
    &amp;&amp; CRM_ReferentePortafoglio__r.PTF_User__r.PTF_RuoloLDAP__c = &apos;069&apos; &amp;&amp; CRM_ReferentePortafoglio__r.Account.PTF_Livello__c = &apos;200&apos;, 
	CRM_ReferentePortafoglio__r.Account.PTF_IdCED__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SecPredIdCedCentroPrivate</label>
    <type>Text</type>
</CustomField>