BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/SecPredIdCedDirezioneRegionale__c.field-meta.xml
<CustomField>
    <fullName>SecPredIdCedDirezioneRegionale__c</fullName>
    <formula>IF(OR(SecPredIdCedFiliale__c=&apos;7111&apos;,SecPredIdCedFiliale__c=&apos;7114&apos;,SecPredIdCedFiliale__c=&apos;7115&apos;), &apos;5806&apos;,
IF(SecPredIdCedFiliale__c = &apos;7113&apos;, &apos;Nessuna&apos;,
PTF_DirezioneRegionale__r.PTF_IdCED__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SecPredIdCedDirezioneRegionale</label>
    <type>Text</type>
</CustomField>