BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/SecPredIdCedFiliale__c.field-meta.xml
<CustomField>
    <fullName>SecPredIdCedFiliale__c</fullName>
    <formula>PTF_Filiale__r.PTF_IdCED__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SecPredIdCedFiliale</label>
    <type>Text</type>
</CustomField>