BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/SecPredIdCedUffPrivate__c.field-meta.xml
<CustomField>
    <fullName>SecPredIdCedUffPrivate__c</fullName>
    <formula>IF(ISPICKVAL(PTF_ModelloDiServizio__c, &quot;Private&quot;) &amp;&amp; SecPredIdCedBanca__c = &apos;21792&apos; &amp;&amp; CRM_ReferentePortafoglio__r.PTF_User__r.PTF_RuoloLDAP__c =&apos;069&apos; &amp;&amp; CRM_ReferentePortafoglio__r.Account.PTF_Livello__c = &apos;200&apos;, CRM_ReferentePortafoglio__r.Account.Parent.PTF_IdCED__c,
IF(ISPICKVAL(PTF_ModelloDiServizio__c, &quot;Private&quot;) &amp;&amp; SecPredIdCedBanca__c = &apos;21792&apos; &amp;&amp; CRM_ReferentePortafoglio__r.PTF_User__r.PTF_RuoloLDAP__c =&apos;069&apos; &amp;&amp; CRM_ReferentePortafoglio__r.Account.PTF_Livello__c = &apos;180&apos;, CRM_ReferentePortafoglio__r.Account.PTF_IdCED__c,
IF(ISPICKVAL(PTF_ModelloDiServizio__c, &quot;Private&quot;) &amp;&amp; SecPredIdCedBanca__c = &apos;2517&apos; &amp;&amp; ((CRM_ReferentePortafoglio__r.PTF_User__r.PTF_RuoloLDAP__c =&apos;100&apos; &amp;&amp; CRM_ReferentePortafoglio__r.PTF_User__r.Profile.Name =&apos;NEC_T.7&apos;) || CRM_ReferentePortafoglio__r.PTF_User__r.PTF_RuoloLDAP__c =&apos;069&apos;), CRM_ReferentePortafoglio__r.Account.PTF_IdCED__c,
IF(ISPICKVAL(PTF_ModelloDiServizio__c, &quot;Private&quot;) &amp;&amp; SecPredIdCedBanca__c = &apos;21792&apos; &amp;&amp; CRM_ReferentePortafoglio__r.PTF_User__r.PTF_RuoloLDAP__c =&apos;100&apos; &amp;&amp; CRM_ReferentePortafoglio__r.PTF_User__r.Profile.Name =&apos;NEC_T.7&apos;, CRM_ReferentePortafoglio__r.Account.PTF_IdCED__c,
null))))</formula>
    <label>SecPredIdCedUffPrivate</label>
    <type>Text</type>
</CustomField>