BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/UserIDCED__c.field-meta.xml
<CustomField>
    <fullName>UserIDCED__c</fullName>
    <formula>VALUE($User.idced__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UserIDCED</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>