BPER/DEVF/force-app/main/default/objects/Wallet__c/recordTypes/Assente.recordType-meta.xml
<RecordType>
    <fullName>Assente</fullName>
    <active>true</active>
    <label>Assente</label>
</RecordType>