BPER/DEVF/force-app/main/default/objects/Wallet__c/recordTypes/MicroWallet.recordType-meta.xml
<RecordType>
    <fullName>MicroWallet</fullName>
    <active>true</active>
    <label>Microportafoglio</label>
</RecordType>