BPER/DEVF/force-app/main/default/objects/Wallet__c/recordTypes/Residuale.recordType-meta.xml
<RecordType>
    <fullName>Residuale</fullName>
    <active>true</active>
    <label>Residuale</label>
</RecordType>