BPER/DEVF/force-app/main/default/objects/Wallet__c/recordTypes/TechnicalWallet.recordType-meta.xml
<RecordType>
    <fullName>TechnicalWallet</fullName>
    <active>true</active>
    <label>Portafoglio Tecnico</label>
</RecordType>